@@ -1,3 +1,7 @@
+drkns 17.06.2016 17:44:53 +0200 - build 4711
+
+1. Пара глюков WindowMode.
+
 drkns 17.06.2016 15:12:33 +0200 - build 4710
 
 1. Восстановим работоспособность в Win2k.
